--- a/a/s2025781107.html
+++ b/a/s2025781107.html
@@ -381,7 +381,7 @@
 											<i class="bi bi-clock-history text-primary me-2"></i><strong>Version:</strong> 2025-06-06 (1)
 										</li>
 										<li>
-											<i class="bi bi-c-circle text-primary me-2"></i><strong>License:</strong> This work is licensed under a <a rel="license" target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+											<i class="bi bi-c-circle text-primary me-2"></i><strong>License:</strong> This work is licensed under a <a rel="license" target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International (CC BY 4.0)</a>.
 										</li>
 									</ul>
 								</div>
@@ -473,100 +473,106 @@
 		<a href="#top" class="btn-scroll-top" data-scroll="">
 			<i class="btn-scroll-top-icon bi bi-chevron-up"></i>
 		</a>
-		<footer class="footer border-top bg-primary-subtle">
-			<div class="container py-5">
-				<div class="row g-4">
-					<div class="col-lg-4">
-						<p class="mb-1">
-							SOLAV Journal is an open access, peer-reviewed journal publishing interdisciplinary applied research with real-world impact.
-							<br><span class="font-sm"><strong>Publication Frequency:</strong> Continuous publication.</span>
-							<br><span class="font-sm"><strong>Editor-In-Chief:</strong> Maher Asaad Baker</span>
-							<br><span class="font-sm"><strong>Publisher:</strong> Leothar Company, Riyadh, Saudi Arabia</span>
-						</p>
-						<div class="issn-container mt-0">
-							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
-							<span class="issn-text">ISSN request pending</span>
-						</div>
-					</div>
-					<div class="col-lg-2 col-md-4">
-						<h5 class="mb-3 fw-bold">Quick Links</h5>
-						<ul class="list-unstyled">
-							<li class="mb-2"><a href="/aims-scope" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Aims & Scope</a></li>
-							<li class="mb-2"><a href="/guidelines" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Author Guidelines</a></li>
-							<li class="mb-2"><a href="/submit" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Submit Manuscript</a></li>
-							<li class="mb-2"><a href="/archive" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Article Archive</a></li>
-							<li class="mb-2"><a href="/about" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">About the Journal</a></li>
-						</ul>
-					</div>
-					<div class="col-lg-3 col-md-4">
-						<h5 class="mb-3 fw-bold">Policies</h5>
-						<ul class="list-unstyled">
-							<li class="mb-2"><a href="/ethics" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Publication Ethics</a></li>
-							<li class="mb-2"><a href="/apc" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Article Processing Charges</a></li>
-							<li class="mb-2"><a href="/review" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Peer Review Process</a></li>
-							<li class="mb-2"><a href="/access" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Open Access & Licensing</a></li>
-							<li class="mb-2"><a href="/archiving" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Archiving & Management</a></li>
-						</ul>
-					</div>
-					<div class="col-lg-3 col-md-4">
-						<h5 class="mb-3 fw-bold">Contact & Support</h5>
-						<ul class="list-unstyled">
-							<li class="mb-2">
-								<i class="bi bi-envelope me-2 text-primary"></i>
-								<a href="mailto:contact@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">General Inquiries</a>
-							</li>
-							<li class="mb-2">
-								<i class="bi bi-question-circle me-2 text-primary"></i>
-								<a href="mailto:support@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Technical Support</a>
-							</li>
-							<li class="mb-2">
-								<i class="bi bi-shield-check me-2 text-primary"></i>
-								<a href="mailto:ethics@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Ethics Concerns</a>
-							</li>
-							<li class="mb-2">
-								<i class="bi bi-currency-exchange me-2 text-primary"></i>
-								<a href="mailto:apc@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">APC & Payments</a>
-							</li>
-							<li class="mb-2">
-								<i class="bi bi-people me-2 text-primary"></i>
-								<a href="mailto:editorial@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Editorial Board</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="row pt-2 border-top">
-					<div class="col-md-6 text-md-end order-md-2 px-2">
-						<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
-							<div class="col-12 p-0 m-0">
-								<a href="https://zenodo.org/communities/solav" 
-								title="Permanent archival of all articles in Zenodo (CERN), a CoreTrustSeal-certified repository" 
-								target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
-								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
-								title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
-								target="_blank"><img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite DOI registration"></a>
-								<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
-								title="Scholarly metadata harvested and discoverable in OpenAlex database" 
-								target="_blank"><img src="/images/openalex_logo.svg" class="d-Icons" alt="OpenAlex scholarly database"></a>
-								<a href="https://bsky.app/profile/solav.me" 
-								title="Official journal communications channel on Bluesky social network" 
-								target="_blank"><img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky communications channel"></a>
-								<a rel="me" href="https://mastodon.social/@SOLAVjournal" 
-								title="Official journal presence on Mastodon federated social network" 
-								target="_blank"><img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon scholarly presence"></a>
+		<footer class="footer border-top border-primary-subtle bg-secondary-subtle shadow-lg py-4">
+			<div class="bg-light bg-opacity-50 p-0">
+				<div class="container">
+					<div class="row g-4">
+						<div class="col-lg-4">
+							<p class="mb-1">
+								SOLAV Journal is an open access, peer-reviewed journal publishing interdisciplinary applied research with real-world impact.
+								<br><span class="font-sm"><strong>Publication Frequency:</strong> Continuous publication.</span>
+								<br><span class="font-sm"><strong>Editor-In-Chief:</strong> Maher Asaad Baker</span>
+								<br><span class="font-sm"><strong>Publisher:</strong> Leothar Company, Riyadh, Saudi Arabia</span>
+							</p>
+							<div class="issn-container mt-0">
+								<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
+								<span class="issn-text">ISSN request pending</span>
 							</div>
-							<ul class="list-inline col-12 p-0 m-0">
-								<li class="list-inline-item p-0 m-0"><a href="/privacy" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Privacy Policy</a><span class="text-primary p-0 m-0 px-2">●</span></li>
-								<li class="list-inline-item p-0 m-0"><a href="/tou" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Terms of Use</a><span class="text-primary p-0 m-0 px-2">●</span></li>
-								<li class="list-inline-item p-0 m-0"><a href="/accessibility" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Accessibility</a></li>
+						</div>
+						<div class="col-lg-2 col-md-4">
+							<h5 class="mb-3 fw-bold">Quick Links</h5>
+							<ul class="list-unstyled">
+								<li class="mb-2"><a href="/aims-scope" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Aims & Scope</a></li>
+								<li class="mb-2"><a href="/guidelines" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Author Guidelines</a></li>
+								<li class="mb-2"><a href="/submit" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Submit Manuscript</a></li>
+								<li class="mb-2"><a href="/archive" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Article Archive</a></li>
+								<li class="mb-2"><a href="/about" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">About the Journal</a></li>
+							</ul>
+						</div>
+						<div class="col-lg-3 col-md-4">
+							<h5 class="mb-3 fw-bold">Policies</h5>
+							<ul class="list-unstyled">
+								<li class="mb-2"><a href="/ethics" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Publication Ethics</a></li>
+								<li class="mb-2"><a href="/apc" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Article Processing Charges</a></li>
+								<li class="mb-2"><a href="/review" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Peer Review Process</a></li>
+								<li class="mb-2"><a href="/access" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Open Access & Licensing</a></li>
+								<li class="mb-2"><a href="/archiving" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Archiving & Management</a></li>
+							</ul>
+						</div>
+						<div class="col-lg-3 col-md-4">
+							<h5 class="mb-3 fw-bold">Contact & Support</h5>
+							<ul class="list-unstyled">
+								<li class="mb-2">
+									<i class="bi bi-envelope me-2 text-primary"></i>
+									<a href="mailto:contact@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">General Inquiries</a>
+								</li>
+								<li class="mb-2">
+									<i class="bi bi-question-circle me-2 text-primary"></i>
+									<a href="mailto:support@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Technical Support</a>
+								</li>
+								<li class="mb-2">
+									<i class="bi bi-shield-check me-2 text-primary"></i>
+									<a href="mailto:ethics@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Ethics Concerns</a>
+								</li>
+								<li class="mb-2">
+									<i class="bi bi-currency-exchange me-2 text-primary"></i>
+									<a href="mailto:apc@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">APC & Payments</a>
+								</li>
+								<li class="mb-2">
+									<i class="bi bi-people me-2 text-primary"></i>
+									<a href="mailto:editorial@solav.me" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Editorial Board</a>
+								</li>
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-6 order-md-1">
-						<p class="mb-0 h-100">
-							<strong>Your privacy matters</strong>. We use cookies to enhance your visit and analyze site traffic. By continuing to browse, you agree to our use of cookies.
-							<br>&copy; <span id="currentYear"></span> SOLAV Journal. This is an open access journal distributed under the 
-							<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Creative Commons Attribution License (CC BY 4.0)</a>.
-						</p>
+				</div>
+			</div>
+			<div class="p-0">
+				<div class="container">	
+					<div class="row pt-2 border-top">
+						<div class="col-md-6 text-md-end order-md-2 px-2">
+							<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
+								<div class="col-12 p-0 m-0">
+									<a href="https://zenodo.org/communities/solav" 
+									title="Permanent archival of all articles in Zenodo (CERN), a CoreTrustSeal-certified repository" 
+									target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
+									<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
+									title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
+									target="_blank"><img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite DOI registration"></a>
+									<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
+									title="Scholarly metadata harvested and discoverable in OpenAlex database" 
+									target="_blank"><img src="/images/openalex_logo.svg" class="d-Icons" alt="OpenAlex scholarly database"></a>
+									<a href="https://bsky.app/profile/solav.me" 
+									title="Official journal communications channel on Bluesky social network" 
+									target="_blank"><img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky communications channel"></a>
+									<a rel="me" href="https://mastodon.social/@SOLAVjournal" 
+									title="Official journal presence on Mastodon federated social network" 
+									target="_blank"><img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon scholarly presence"></a>
+								</div>
+								<ul class="list-inline col-12 p-0 m-0">
+									<li class="list-inline-item p-0 m-0"><a href="/privacy" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Privacy Policy</a><span class="text-primary p-0 m-0 px-2">●</span></li>
+									<li class="list-inline-item p-0 m-0"><a href="/tou" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Terms of Use</a><span class="text-primary p-0 m-0 px-2">●</span></li>
+									<li class="list-inline-item p-0 m-0"><a href="/accessibility" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Accessibility</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-6 order-md-1">
+							<p class="mb-0 h-100">
+								<strong>Your privacy matters</strong>. We use cookies to enhance your visit and analyze site traffic. By continuing to browse, you agree to our use of cookies.
+								<br>&copy; <span id="currentYear"></span> SOLAV Journal. This is an open access journal distributed under the 
+								<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Creative Commons Attribution License (CC BY 4.0)</a>.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
