--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260209.1" rel="stylesheet">
+		<link href="/css/style.css?20260215" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -313,7 +313,49 @@
 						</div>
 					</div>
 				</section>
+				<section class="container py-5 mb-lg-4">
+					<div class="card border-0 bg-secondary bg-opacity-50 p-4 p-md-5 rounded-2">
+						<div class="text-center mb-4 mb-md-5">
+							<h2 class="h2 mb-3">Indexing & Global Discovery</h2>
+							<p class="mx-auto mb-0">
+								SOLAV Journal ensures maximum reach for your research through integration with global scholarly metadata networks and library discovery systems.
+							</p>
+						</div>
+						
+						<div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-4 justify-content-center align-items-center">
+							
+							<div class="col text-center">
+								<a href="https://search.worldcat.org/search?q=pb%3A%22SOLAV+Journal%22" target="_blank" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
+									<img src="/images/worldcat_logo.svg" alt="WorldCat" class="img-fluid">
+									<span class="d-block fw-bold text-nav">WorldCat</span>
+									<small class="text-muted d-block" style="font-size: 0.7rem;">OCLC Network</small>
+								</a>
+							</div>
+							<div class="col text-center">
+								<a href="https://scholar.google.com/scholar?q=%22SOLAV+Journal%22" target="_blank" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
+									<img src="/images/google_scholar_logo.svg" alt="Google Scholar" class="img-fluid">
+									<span class="d-block fw-bold text-nav">Google Scholar</span>
+									<small class="text-muted d-block" style="font-size: 0.7rem;">Discoverable</small>
+								</a>
+							</div>
+							<div class="col text-center">
+								<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" target="_blank" rel="noopener" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
+									<img src="/images/openalex_logo.svg" alt="SOLAV Journal in OpenAlex scholarly database" class="img-fluid">
+									<span class="d-block fw-bold text-nav">OpenAlex</span>
+									<small class="text-muted d-block" style="font-size: 0.7rem;">Scholarly Database</small>
+								</a>
+							</div>
+							<div class="col text-center">
+								<a href="/oai-pmh" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
+									<i class="bi bi-share fs-1 text-primary mb-2"></i>
+									<span class="d-block fw-bold text-nav">OAI-PMH</span>
+									<small class="text-muted d-block" style="font-size: 0.7rem;">Metadata Feed</small>
+								</a>
+							</div>
 
+						</div>
+					</div>
+				</section>
 				<section class="mb-5">
 					<div class="row g-4">
 						<div class="col-lg-4">
@@ -796,21 +838,31 @@
 						<div class="col-md-6 text-md-end order-md-2 px-2">
 							<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
 								<div class="col-12 p-0 m-0">
-									<a href="https://zenodo.org/communities/solav" 
-									title="Permanent archival of all articles in Zenodo (CERN), a CoreTrustSeal-certified repository" 
-									target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
-									<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
-									title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
-									target="_blank"><img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite DOI registration"></a>
-									<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
-									title="Scholarly metadata harvested and discoverable in OpenAlex database" 
-									target="_blank"><img src="/images/openalex_logo.svg" class="d-Icons" alt="OpenAlex scholarly database"></a>
-									<a href="https://bsky.app/profile/solav.me" 
-									title="Official journal communications channel on Bluesky social network" 
-									target="_blank"><img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky communications channel"></a>
-									<a rel="me" href="https://mastodon.social/@SOLAVjournal" 
-									title="Official journal presence on Mastodon federated social network" 
-									target="_blank"><img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon scholarly presence"></a>
+									<div class="pb-1">
+										<a href="https://search.worldcat.org/search?q=pb%3A%22SOLAV+Journal%22" 
+										title="Discoverable in WorldCat global library catalog" 
+										target="_blank"><img src="/images/worldcat_icon.svg" class="d-Icons" alt="WorldCat global library catalog"></a>
+										<a href="https://scholar.google.com/scholar?q=%22SOLAV+Journal%22" 
+										title="Search SOLAV Journal articles in Google Scholar" 
+										target="_blank"><img src="/images/google_scholar_icon.svg" class="d-Icons" alt="Google Scholar"></a>
+										<a href="https://zenodo.org/communities/solav" 
+										title="Permanent archival of all articles in Zenodo (CERN), a CoreTrustSeal-certified repository" 
+										target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
+										<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
+										title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
+										target="_blank"><img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite DOI registration"></a>
+										<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
+										title="Scholarly metadata harvested and discoverable in OpenAlex database" 
+										target="_blank"><img src="/images/openalex_icon.svg" class="d-IconsL m-0" alt="OpenAlex scholarly database"></a>
+									</div>
+									<div>
+										<a href="https://bsky.app/profile/solav.me" 
+										title="Official journal communications channel on Bluesky social network" 
+										target="_blank"><img src="/images/bluesky-icon.svg" class="d-sIcons" alt="Bluesky communications channel"></a>
+										<a rel="me" href="https://mastodon.social/@SOLAVjournal" 
+										title="Official journal presence on Mastodon federated social network" 
+										target="_blank"><img src="/images/mastodon-icon.svg" class="d-sIconsL m-0" alt="Mastodon scholarly presence"></a>
+									</div>
 								</div>
 								<ul class="list-inline col-12 p-0 m-0">
 									<li class="list-inline-item p-0 m-0"><a href="/privacy" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Privacy Policy</a><span class="text-primary p-0 m-0 px-2">●</span></li>
