--- a/about.html
+++ b/about.html
@@ -347,7 +347,7 @@
 							</div>
 							<div class="col text-center">
 								<a href="/oai-pmh" class="d-block p-3 card h-100 border-0 shadow-sm card-hover text-decoration-none">
-									<i class="bi bi-share fs-1 text-primary mb-2"></i>
+									<img src="/images/solav_metadata_logo.svg" alt="SOLAV Metadata" class="img-fluid">
 									<span class="d-block fw-bold text-nav">OAI-PMH</span>
 									<small class="text-muted d-block" style="font-size: 0.7rem;">Metadata Feed</small>
 								</a>
