--- a/faq.html
+++ b/faq.html
@@ -98,7 +98,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -128,7 +128,9 @@
 									<a href="#" class="nav-link dropdown-toggle active pe-auto" data-bs-toggle="dropdown" aria-current="page">About</a>
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
-										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><a href="/about#indexing" class="dropdown-item">&emsp;<i class="bi bi-arrow-return-right"></i> Indexing & Global Discovery</a></li>
+										<li><a href="/about#editorialBoard" class="dropdown-item">&emsp;<i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><hr class="dropdown-divider"></li>
 										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 										<li><a href="/faq" class="dropdown-item active pe-auto">Frequently Asked Questions</a></li>
 									</ul>
@@ -186,7 +188,6 @@
 							<h6 class="mb-3 fw-bold">Quick Navigation</h6>
 							<a href="#search-section"><i class="bi bi-search"></i> Smart Search</a>
 							<a href="#browse-section"><i class="bi bi-folder"></i> Browse Sections</a>
-							<a href="#ai-assistant"><i class="bi bi-robot"></i> AI Assistant</a>
 							<hr class="my-3">
 							<div id="section-list"></div>
 						</div>
@@ -208,7 +209,6 @@
 													<i class="bi bi-search me-1"></i> Search
 												</button>
 											</div>
-											<div class="form-text mt-2">Try natural language queries like "How much does publication cost?" or "What is your peer review policy?"</div>
 										</div>
 										<div class="col-md-4">
 											<div class="card bg-primary bg-opacity-10 border-primary">
