--- a/a/s2025781112.html
+++ b/a/s2025781112.html
@@ -215,7 +215,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item"><span class="text-primary p-0 m-0 ps-2">●</span> Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -245,7 +245,9 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">About</a>
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
-										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><a href="/about#indexing" class="dropdown-item">&emsp;<i class="bi bi-arrow-return-right"></i> Indexing & Global Discovery</a></li>
+										<li><a href="/about#editorialBoard" class="dropdown-item">&emsp;<i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><hr class="dropdown-divider"></li>
 										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 										<li><a href="/faq" class="dropdown-item">Frequently Asked Questions</a></li>
 									</ul>
