--- a/apc.html
+++ b/apc.html
@@ -679,15 +679,15 @@
 										<a href="https://scholar.google.com/scholar?q=%22SOLAV+Journal%22" 
 										title="Search SOLAV Journal articles in Google Scholar" 
 										target="_blank"><img src="/images/google_scholar_icon.svg" class="d-Icons" alt="Google Scholar"></a>
+										<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
+										title="Scholarly metadata harvested and discoverable in OpenAlex database" 
+										target="_blank"><img src="/images/openalex_icon.svg" class="d-Icons m-0" alt="OpenAlex scholarly database"></a>
 										<a href="https://zenodo.org/communities/solav" 
 										title="Permanent archival of all articles in Zenodo (CERN), a CoreTrustSeal-certified repository" 
 										target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
 										<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
 										title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
-										target="_blank"><img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite DOI registration"></a>
-										<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
-										title="Scholarly metadata harvested and discoverable in OpenAlex database" 
-										target="_blank"><img src="/images/openalex_icon.svg" class="d-IconsL m-0" alt="OpenAlex scholarly database"></a>
+										target="_blank"><img src="/images/datacite-logo.svg" class="d-sIconsL" alt="DataCite DOI registration"></a>
 									</div>
 									<div>
 										<a href="https://bsky.app/profile/solav.me" 
