--- a/oai-pmh.html
+++ b/oai-pmh.html
@@ -747,6 +747,25 @@
 								</div>
 							</div>
 						</section>
+						<section id="compliance" class="mb-5">
+							<h3>Structured Metadata Preservation</h3>
+							<div class="card bg-light shadow-lg rounded-3 border border-opacity-10">
+								<div class="card-body p-4">
+									<p>SOLAV maintains a <a href="https://osf.io/2yskf/" target="_blank" rel="noopener">dedicated OSF project</a> that preserves machine-readable metadata records for each published article in multiple standardized formats:</p>
+  
+									<ul>
+										<li><strong>Dublin Core XML</strong>: For OAI-PMH harvesting and library system interoperability</li>
+										<li><strong>BibTeX</strong>: For direct import into reference managers (Zotero, Mendeley, EndNote)</li>
+										<li><strong>RIS</strong>: Alternative format for citation management software</li>
+										<li><strong>MARC21</strong>: For integration with library cataloging systems</li>
+									</ul>
+
+									<p class="text-muted small mt-3">
+										<strong>Note:</strong> OSF serves as a metadata preservation layer only, not a discovery channel.
+									</p>
+								</div>
+							</div>
+						</section>
 
 						<section id="contact" class="card border-primary border-2 p-4 mb-5">
 							<div class="card-body text-center">
@@ -937,7 +956,13 @@
 										target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
 										<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
 										title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
-										target="_blank"><img src="/images/datacite-logo.svg" class="d-sIconsL" alt="DataCite DOI registration"></a>
+										target="_blank"><img src="/images/datacite-logo.svg" class="d-sIcons" alt="DataCite DOI registration"></a>
+										<a href="https://osf.io/2yskf/" 
+										title="Supplementary metadata preservation via OSF" 
+										target="_blank" rel="noopener"><img src="/images/osf-logo.svg" class="d-sIcons" alt="OSF metadata preservation repository"></a>
+										<a href="https://isni.org/isni/0000000506340505" 
+										title="International Standard Name Identifier (ISNI)" 
+										target="_blank" rel="noopener"><img src="/images/isni-logo.svg" class="d-sIconsL" alt="ISNI identifier for SOLAV Journal"></a>
 									</div>
 									<div>
 										<a href="https://bsky.app/profile/solav.me" 
