--- a/research-integrity.html
+++ b/research-integrity.html
@@ -1026,7 +1026,13 @@
 										target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
 										<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
 										title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
-										target="_blank"><img src="/images/datacite-logo.svg" class="d-sIconsL" alt="DataCite DOI registration"></a>
+										target="_blank"><img src="/images/datacite-logo.svg" class="d-sIcons" alt="DataCite DOI registration"></a>
+										<a href="https://osf.io/2yskf/" 
+										title="Supplementary metadata preservation via OSF" 
+										target="_blank" rel="noopener"><img src="/images/osf-logo.svg" class="d-sIcons" alt="OSF metadata preservation repository"></a>
+										<a href="https://isni.org/isni/0000000506340505" 
+										title="International Standard Name Identifier (ISNI)" 
+										target="_blank" rel="noopener"><img src="/images/isni-logo.svg" class="d-sIconsL" alt="ISNI identifier for SOLAV Journal"></a>
 									</div>
 									<div>
 										<a href="https://bsky.app/profile/solav.me" 
