--- a/oai-pmh.html
+++ b/oai-pmh.html
@@ -183,6 +183,8 @@
 						<a href="#harvesting" class="d-block mb-2 mobile-nav-link"><i class="bi bi-download"></i> Harvesting Guidelines</a>
 						<a href="#examples" class="d-block mb-2 mobile-nav-link"><i class="bi bi-code-slash"></i> Usage Examples</a>
 						<a href="#compliance" class="d-block mb-2 mobile-nav-link"><i class="bi bi-shield-check"></i> Compliance & Standards</a>
+						<a href="#preservation" class="d-block mb-2 mobile-nav-link"><i class="bi bi-file-code"></i> Metadata Preservation</a>
+						<a href="#contact" class="d-block mb-2 mobile-nav-link"><i class="bi bi-envelope"></i> Technical Contact</a>
 					</div>
 				</div>
 			</div>
@@ -200,6 +202,7 @@
 							<a href="#harvesting"><i class="bi bi-download"></i> Harvesting Guidelines</a>
 							<a href="#examples"><i class="bi bi-code-slash"></i> Usage Examples</a>
 							<a href="#compliance"><i class="bi bi-shield-check"></i> Compliance & Standards</a>
+							<a href="#preservation"><i class="bi bi-file-code"></i> Metadata Preservation</a>
 							<a href="#contact"><i class="bi bi-envelope"></i> Technical Contact</a>
 							
 							<h6 class="mt-5 mb-3 fw-bold">Quick Actions</h6>
@@ -747,7 +750,7 @@
 								</div>
 							</div>
 						</section>
-						<section id="compliance" class="mb-5">
+						<section id="preservation" class="mb-5">
 							<h3>Structured Metadata Preservation</h3>
 							<div class="card bg-light shadow-lg rounded-3 border border-opacity-10">
 								<div class="card-body p-4">
